--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,8 @@
 Package: safety
-Title: System Safety Risk Assessments
+Title: System Safety Risk Assessment
 Version: 0.0.9
 Authors@R: 
-    person("Taylor", "Thoman", , "thomant@tcd.ie", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+    person("Taylor", "Thoman", , "thomant@tcd.ie", role = c("aut", "cre", "cph"))
 Description: Provides a risk matrix function to assist with system safety risk assessment.
 Imports: ggplot2, plotly, dplyr
 License: MIT + file LICENSE
